--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ body {
   line-height: 1.7;
   color: #263238; }
 
+.rellax-wrap {
+  position: absolute !important; }
+
 .content-wrapper {
   visibility: hidden; }
 
@@ -34,7 +37,7 @@ section {
     height: 800px !important; } }
 
 .heading-1 {
-  margin-bottom: 9rem;
+  margin-bottom: 4rem;
   opacity: 0;
   font-size: 4rem;
   transform: translateY(10rem);
@@ -631,8 +634,8 @@ section {
   width: 500px;
   height: 300px; }
   .frame-pic {
-    width: 180px;
-    height: 180px;
+    width: 150px;
+    height: 150px;
     border: solid #263238 3px;
     transition: all .2s;
     position: absolute;
@@ -641,18 +644,24 @@ section {
     justify-content: center;
     padding: 0 1rem 0 1rem; }
     .frame-pic-1 {
+      top: 170px;
       left: 0; }
       .frame-pic-1:hover p:after {
         content: "Die digitale Zukunft der Baubranche"; }
     .frame-pic-2 {
-      top: 50px;
-      left: 150px; }
+      top: 170px;
+      left: 170px; }
       .frame-pic-2:hover p:after {
         content: "Umsetzung aller BIM-Dimensionen"; }
     .frame-pic-3 {
-      top: 25px;
-      right: 20px; }
+      top: 340px;
+      left: 170px; }
       .frame-pic-3:hover p:after {
+        content: "Visualisierungen aller Art"; }
+    .frame-pic-4 {
+      top: 0px;
+      left: 170px; }
+      .frame-pic-4:hover p:after {
         content: "Visualisierungen aller Art"; }
     .frame-pic:hover {
       background-color: #263238;
@@ -684,7 +693,7 @@ section {
   text-transform: uppercase;
   font-size: 1rem;
   letter-spacing: .15rem;
-  transition: all .4s;
+  transition: all .6s;
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -695,7 +704,7 @@ section {
     max-height: 0;
     overflow: hidden;
     width: 80%;
-    transition: max-height 0.2s ease-out; }
+    transition: max-height 0.4s ease-out; }
     .faqslide-content p {
       font-size: 1.3rem; }
   .faqslide > p {
@@ -720,7 +729,7 @@ section {
     transform-origin: 0 0;
     transform: translateX(-100%) skewX(-45deg);
     background-color: #f7d147;
-    transition: all .3s;
+    transition: all .8s;
     z-index: -1; }
   .faqslide:hover:before {
     transform: translateX(0) skewX(-45deg); }
@@ -736,11 +745,11 @@ section {
 .slidecard {
   width: 800px;
   height: 400px;
-  box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.3);
   position: relative;
   display: flex;
   align-items: center;
-  background-color: white; }
+  background-color: white;
+  box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.3); }
   .slidecard-nav {
     right: 25%;
     top: 25%;
@@ -748,19 +757,34 @@ section {
     z-index: 2; }
     .slidecard-nav-cube {
       display: inline-block;
+      position: relative;
       border: 3px solid #263238;
       margin-left: 2rem;
       width: 20px;
       height: 20px;
       transition: transform .3s ease;
-      cursor: pointer; }
+      cursor: pointer;
+      backface-visibility: hidden;
+      -webkit-backface-visibility: hidden; }
+      .slidecard-nav-cube:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 0%;
+        height: 100%;
+        transform-origin: 0 0;
+        background-color: #263238;
+        transition: all .3s;
+        z-index: -1; }
       .slidecard-nav-cube.active {
-        transform: scale(1.2);
-        transform: rotate(45deg);
-        background-color: #263238; }
-      .slidecard-nav-cube:hover {
-        transform: scale(1.2);
         transform: rotate(45deg); }
+        .slidecard-nav-cube.active:before {
+          width: 100%; }
+      .slidecard-nav-cube:hover {
+        transform: rotate(45deg); }
+        .slidecard-nav-cube:hover:before {
+          width: 100%; }
   .slidecard-content {
     position: absolute;
     width: 100%;
@@ -775,13 +799,15 @@ section {
       opacity: 1;
       transform: translateX(0); }
     .slidecard-content-image {
+      outline: 2px solid #263238;
+      outline-offset: .9rem;
       box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.3);
       background-size: cover;
       height: 250px;
       width: 250px;
       position: absolute;
       top: 2rem;
-      left: -4rem;
+      left: -8rem;
       transition: transform 1s, opacity 1s;
       opacity: 0;
       transform: translateX(-5rem); }
@@ -793,7 +819,7 @@ section {
         background-image: linear-gradient(to right bottom, rgba(247, 209, 71, 0.1), rgba(38, 50, 56, 0.1)), url("../img/slider/betreiben_comp.jpg"); }
     .slidecard-content-heading {
       top: 40%;
-      right: 30%;
+      left: 30%;
       position: absolute;
       font-size: 2rem;
       text-transform: uppercase;
@@ -802,29 +828,32 @@ section {
       transform: translateY(5rem);
       transition: transform 1s, opacity 1s; }
     .slidecard-content-text {
-      width: 50%;
+      width: 60%;
       bottom: 2rem;
       right: 2rem;
+      font-size: 1.1rem;
       position: absolute;
       opacity: 0;
       transform: translateY(5rem);
       transition: transform 1s, opacity 1s; }
 
 .contact {
-  padding: 10px 10px 10px 10px;
+  margin: 10px;
+  padding: 30px;
   width: 500px;
   height: 600px;
   border: 2px solid #263238;
   position: relative; }
   .contact > h2 {
-    width: 480px;
+    width: 420px;
     position: absolute;
     top: 1rem;
     text-align: center;
     font-size: 3rem;
     font-weight: 100; }
   .contact > ul {
-    width: 450px;
+    list-style: decimal-leading-zero;
+    width: 410px;
     margin-left: 30px;
     position: absolute;
     top: 20%;
@@ -832,24 +861,25 @@ section {
     font-size: 1rem;
     font-weight: 100; }
   .contact > p {
-    width: 480px;
+    width: 420px;
     position: absolute;
     bottom: 30%;
     text-align: center;
     font-size: 1rem;
-    font-weight: 100; }
+    font-weight: 700; }
   .contact-foot {
-    width: 480px;
+    width: 420px;
     position: absolute;
-    bottom: 1rem;
+    bottom: 3rem;
     display: flex;
     justify-content: center;
     align-items: center; }
     .contact-foot-frame {
       display: flex;
-      width: 70px;
-      height: 70px;
-      border: 2px solid #263238;
+      width: 60px;
+      height: 60px;
+      outline: 2px solid #263238;
+      outline-offset: .4rem;
       justify-content: center;
       transition: all .4s;
       position: relative;
@@ -878,31 +908,128 @@ section {
     .contact-foot-icon {
       width: 50%; }
 
+.wrapp-rellax {
+  position: absolute;
+  width: 100%;
+  z-index: -10; }
+  .wrapp-rellax-col {
+    width: 25%;
+    float: left;
+    box-sizing: border-box; }
+    .wrapp-rellax-col-container {
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+
+.slideshow-container {
+  height: 400px;
+  position: relative;
+  margin: auto; }
+
+/* Hide the images by default */
+.mySlides {
+  transition: transform 1s, opacity 1s;
+  position: absolute;
+  width: 350px;
+  height: 200px;
+  top: 100px;
+  left: 20%;
+  opacity: 0;
+  padding: 0 10rem 0 10rem;
+  transform: translateX(-100px);
+  outline: 2px solid #263238;
+  outline-offset: .9rem;
+  box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.3);
+  background-size: cover;
+  background-image: linear-gradient(to right bottom, rgba(247, 209, 71, 0.1), rgba(38, 50, 56, 0.1)), url("../img/slider/planen_comp.jpg"); }
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 20%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #000;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none; }
+
+/* Position the "next button" to the right */
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  color: #263238; }
+
+.fadeimgin {
+  opacity: 1;
+  transform: translateX(0px); }
+
+.fadeimgout {
+  opacity: 0;
+  transform: translateX(100px);
+  transition: all 1s; }
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s; }
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4; }
+  to {
+    opacity: 1; } }
+
+@keyframes fade {
+  from {
+    opacity: .1;
+    transform: translateX(-100px); }
+  to {
+    opacity: 1;
+    transform: translateX(0px); } }
+
 .header {
   height: 100vh;
   display: block;
-  background-image: linear-gradient(to right bottom, rgba(247, 209, 71, 0.5), rgba(38, 50, 56, 0.7)), url("../img/head.jpg");
+  background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0), rgba(38, 50, 56, 0.3)), url("../img/head.jpg");
   background-size: cover;
   background-position: top; }
 
 .digital {
-  height: 100vh;
-  border-bottom: 3px #263238; }
+  border-bottom: 3px #263238;
+  position: relative; }
+  .digital-image {
+    display: block;
+    outline: 2px solid #263238;
+    outline-offset: .9rem;
+    background-size: cover;
+    width: 300px;
+    height: 200px;
+    background-image: url("/img/digit.png"); }
+  .digital-text {
+    display: inline-block; }
   .digital-text-absatz {
-    display: inline-block;
     text-align: left;
     font-size: 1.2rem; }
   .digital-text-header {
-    margin-top: 10rem;
-    font-size: 1.4rem;
+    margin-bottom: 3rem;
+    font-size: 1.6rem;
     letter-spacing: 3px; }
 
 .bim5d {
-  background-color: rgba(193, 193, 193, 0.2);
-  height: 100vh; }
+  padding-bottom: 10rem;
+  z-index: 10; }
 
 .wir {
-  height: 100vh; }
+  padding-bottom: 10rem; }
 
 .flex-grid {
   display: flex; }
@@ -1016,7 +1143,7 @@ section {
       font-weight: 100; } }
 
 #faq {
-  height: 100vh; }
+  padding-bottom: 10rem; }
 
 .footer {
   padding: 3rem 0 3rem 0;
@@ -1024,24 +1151,68 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(../img/pattern/pattern.png);
-  background-color: rgba(193, 193, 193, 0.2);
   text-align: center;
-  color: #263238;
-  height: 400px; }
+  color: #263238; }
   .footer-box {
     display: inline-block;
     width: 430px;
     padding-left: auto; }
   .footer h5 {
-    font-size: 2rem; }
+    font-size: 1rem; }
   .footer p i {
     padding-top: 3px; }
   .footer svg {
     display: inline-block; }
   .footer a {
-    margin-top: 1rem;
+    margin-top: 0rem;
     display: block;
     text-decoration: none;
     font-weight: 600;
     color: #263238; }
+
+.datenschutz > .wrapper > h1 {
+  font-size: 4rem; }
+
+.datenschutz > .wrapper > p {
+  margin-right: 20rem;
+  margin-left: 5rem;
+  margin-bottom: 2rem; }
+
+.datenschutz > .wrapper > h4 {
+  margin-right: 20rem;
+  font-size: 2rem;
+  margin-bottom: 1rem; }
+
+.datenschutz > .wrapper > h3 {
+  margin-right: 20rem;
+  font-size: 1rem;
+  margin-left: 5rem;
+  margin-bottom: 0.3rem; }
+
+.datenschutz > .wrapper > ul > li > ul > li {
+  margin-right: 20rem;
+  font-size: 1rem;
+  margin-left: 5rem;
+  margin-bottom: 0.7rem;
+  font-weight: 600; }
+
+.datenschutz > .wrapper > ul > li > h4 {
+  margin-right: 20rem;
+  font-size: 1.5rem;
+  margin-bottom: 1rem; }
+
+.datenschutz > .wrapper > ul > li > p {
+  margin-right: 20rem;
+  margin-left: 5rem;
+  margin-bottom: 2rem; }
+
+.impressum > .wrapper > h1 {
+  font-size: 4rem; }
+
+.impressum > .wrapper > h2 {
+  font-size: 2rem; }
+
+.impressum > .wrapper > p {
+  margin-right: 20rem;
+  margin-left: 15rem;
+  margin-bottom: 2rem; }
