--- a/sass/layout/_bim5d.scss
+++ b/sass/layout/_bim5d.scss
@@ -1,4 +1,4 @@
 .bim5d {
-    background-color: rgba($color: $color-light, $alpha: .2);
-    height: 100vh;
+    padding-bottom: 10rem;
+    z-index: 10;
 }
