--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,8 @@
 @import "components/faqslider";
 @import "components/slide-card";
 @import "components/contact";
+@import "components/rellax";
+@import "components/slideshow";
 @import "layout/header";
 @import "layout/digital";
 @import "layout/bim5d";
@@ -22,3 +24,5 @@
 @import "layout/boxes";
 @import "layout/faq";
 @import "layout/footer";
+@import "layout/datenschutz";
+@import "layout/impressum";
