--- a/sass/components/_frame.scss
+++ b/sass/components/_frame.scss
@@ -5,8 +5,8 @@
 
 
     &-pic {
-        width: 180px;
-        height: 180px;
+        width: 150px;
+        height: 150px;
         border: solid $color-dark 3px;
         transition: all .2s;
         position: absolute;
@@ -16,6 +16,7 @@
         padding: 0 1rem 0 1rem;
 
         &-1 {
+            top: 170px;
             left: 0;
 
             &:hover p:after {
@@ -24,8 +25,8 @@
         }
 
         &-2 {
-            top: 50px;
-            left: 150px;
+            top: 170px;
+            left: 170px;
 
             &:hover p:after {
                 content: "Umsetzung aller BIM-Dimensionen";
@@ -33,9 +34,19 @@
         }
 
         &-3 {
-            top: 25px;
+            top: 340px;
 
-            right: 20px;
+            left: 170px;
+
+            &:hover p:after {
+                content: "Visualisierungen aller Art";
+            }
+        }
+
+        &-4 {
+            top: 0px;
+
+            left: 170px;
 
             &:hover p:after {
                 content: "Visualisierungen aller Art";
@@ -65,6 +76,8 @@
         font-size: 1.4rem;
         display: inline-block;
         text-align: center;
+
+
 
         & span {
             display: inline-block;
