--- a/sass/layout/_digital.scss
+++ b/sass/layout/_digital.scss
@@ -1,16 +1,30 @@
 .digital {
-    height: 100vh;
     border-bottom: 3px $color-dark;
+    position: relative;
+
+    &-image {
+        display: block;
+        outline: 2px solid $color-dark;
+        outline-offset: .9rem;
+        background-size: cover;
+        width: 300px;
+        height: 200px;
+        background-image: url('/img/digit.png');
+    }
+
+    &-text {
+        display: inline-block;
+    }
 
     &-text-absatz {
-        display: inline-block;
+
         text-align: left;
         font-size: 1.2rem;
     }
 
     &-text-header {
-        margin-top: 10rem;
-        font-size: 1.4rem;
+        margin-bottom: 3rem;
+        font-size: 1.6rem;
         letter-spacing: 3px;
     }
 }
