--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,8 +2,8 @@
     height: 100vh;
     display: block;
     background-image: linear-gradient(to right bottom,
-            rgba($color-primary, 0.5),
-            rgba($color-dark, 0.7)),
+            rgba($color-white, 0),
+            rgba($color-dark, 0.3)),
         url("../img/head.jpg");
     background-size: cover;
     background-position: top;
