--- a/sass/layout/_überuns.scss
+++ b/sass/layout/_überuns.scss
@@ -1,5 +1,5 @@
 .wir {
-    height: 100vh;
+    padding-bottom: 10rem;
     // background-color: $color-dark;
     // background-image: url(../img/cube2.svg);
     // background-size: 200px;
